Funciona todo POR FIN (CSS sigue roto)
