# api/swagger.yaml
@@ -22,7 +22,7 @@ tags:
 schemes:
   - "http"
 paths:
-  /user/{identifier}:
+  /user/:
     get:
       tags:
         - "user"
@@ -32,24 +32,18 @@ paths:
       produces:
         - "application/ld+json"
         - "application/json"
-      parameters:
-        - name: "identifier"
-          in: "path"
-          description: "ID del usuario"
-          required: true
-          type: "integer"
-          format: "int64"
       responses:
         "200":
           description: "OK"
           schema:
-            $ref: "#/definitions/User"
+            type: "array"
+            items:
+              $ref: "#/definitions/User"
         "400":
           description: "Invalid ID supplied"
         "404":
           description: "No user found"
       x-swagger-router-controller: "User"
-  /user:
     post:
       tags:
         - "user"
